[project]
name = "successive_rank_nn"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "numpy>=2.3.2",
    "python-dotenv>=1.1.1",
    "torch>=2.8.0",
    "torchvision>=0.23.0",
    "scipy>=1.14.0",
    "matplotlib>=3.10.0",
    "scikit-learn>=1.6.0",
    "losscape"
]

[tool.uv.sources]
torch = [
  { index = "pytorch-cu128" },
]
torchvision = [
  { index = "pytorch-cu128" },
]

[[tool.uv.index]]
name = "pytorch-cu128"
url = "https://download.pytorch.org/whl/cu128"
explicit = true
